# marketing

./: .dockerignore  .gitignore  CLAUDE.md  README.md  WAC-Group-PPT-Template.pptx  WAC-Marketing-App-PRD.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: annuity-sync.yml  company-subtype.yml  deploy.yml  forecast.yml  (+11 more)
apps/forecast/: .env.example  README.md  pyproject.toml
apps/forecast/parity/: gen.ts
apps/forecast/src/wac_forecast/: audit.py  backtest.py  cli.py  config.py  constants.py  hubspot_write.py  metrics.py  r2.py  report.py  scoring.py  snapshot.py  train.py
apps/forecast/src/wac_forecast/baselines/: growth_rate.py  quote_visibility.py  qv_replay.py
apps/forecast/src/wac_forecast/extract/: hubspot.py  supabase_db.py
apps/forecast/src/wac_forecast/features/: company.py  deal.py
apps/forecast/src/wac_forecast/models/: company_sales.py  win_prob.py
apps/forecast/tests/: test_config.py  test_quote_visibility_parity.py  test_snapshot.py
apps/forecast/tests/fixtures/: rollup_parity.json
docs/: descriptions.md  event-lead-routing.md  hubspot-sap-lambda-r2-backup.md  onedrive-dev-performance.md  thom-attribute-filter-plan.md  thom-bot-deferred-sources.md  thom-category-sales-plan.md  thom-dimming-compat-plan.md  thom-feedback-plan.md  thom-lighting-expert-plan.md  thom-product-compatibility-plan.md  thom-track-systems.md  thom-web-crawl-plan.md  zendesk-quote-desk.md
scripts/: deploy-container.sh  hubspot-amount-reconcile.mjs  hubspot-backfill.mjs  hubspot-dedup-lineitems.mjs  update-ppt-template.py
supabase/: README.md
(+467 files in other folders)
